# einops-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: backends.hpp  einops.hpp  packing.hpp  parsing.hpp  torchjit.hpp
include/backends/: abstract_backend.hpp  tensorflow_backend.hpp  torch_backend.hpp
include/extension/: alias.hpp  anonymous.hpp  cache.hpp  exception.hpp  format.hpp  hash.hpp  iterators.hpp  python.hpp  tools.hpp
include/layers/: common.hpp  einmix.hpp  torch.hpp
test/: CMakeLists.txt  main.cpp
test/include/: test_api.hpp  test_einsum.hpp  test_examples.hpp  test_ops.hpp  test_packing.hpp  test_parsing.hpp  test_tools.hpp
